PDF y retoques finales

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GESTIÓ DE REUNIONS",
-  "name": "IES FRANCESC VIDAL I BARRAQUER - GESTIÓ DE REUNIONS",
+  "short_name": "Aplicació per la gestió de les reunions",
+  "name": "Institut Francesc Vidal i Barraquer | Aplicació per la gestió de les reunions",
   "icons": [
     {
       "src": "favicon.ico",
